--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             </div>
             <div class="col-md-7">
               <h4>About me</h4>
-              <p>Hi there! I'am Rupesh Shirose from Mumbai city, India. I have studied Bachlor in Electrical Engineering at University of Mumbai
-                I also have 4+ years of experence working as a Process Engineer in Projects at Asahi India Glass Ltd, which is one of the leading glass manufacturing and processing company in India.
+              <p>Hi there! I am Rupesh Shirose from Mumbai City, India. I have studied Bachelor's in Electrical Engineering at the University of Mumbai
+                I also have 4+ years of experience working as a Process Engineer on Projects at Asahi India Glass Ltd, which is one of the leading glass manufacturing and processing companies in India.
               </p>
               <p>
-                Currently, I'm living in Linz, Upper Austria and doing my Masters in Science in the field of Electrical Engineering at University of Applied Sciences Upper Austria.
-                My interests are projects involving Electrical engineering, Industrial automation, PLC, CNC based machines, IOT and Robotics
+                Currently, I'm living in Linz, Upper Austria, and have a Master of Science degree in the field of Electrical Engineering from the University of Applied Sciences Upper Austria. I am 
+                I am also working at Primetals Technologies, Linz on Automation projects. My interests are projects involving Electrical engineering, Industrial Automation, PLC, CNC-based machines, Computer Vision, IOT and Robotics
               </p>
 
             </div>
